feat: 实现自定义安全管理器